--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
          <button class="todo-btn">
              <i class="fas fa-plus-square"></i>
          </button>
+         <div class="select">
+             <select class="todo-select">
+                 <option value="all">ALL</option>
+                 <option value="completed">completed</option>
+                 <option value="deleted">Pending    </option>
+             </select>
+         </div>
      </form>
 
      <div class="todo-container">
