Todo list Has been Completed

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
              <i class="fas fa-plus-square"></i>
          </button>
          <div class="select">
-             <select class="todo-select">
+             <select  name="todo" class="filter-todo">
                  <option value="all">ALL</option>
                  <option value="completed">completed</option>
-                 <option value="deleted">Pending    </option>
+                 <option value="uncompleted">uncompleted </option>
              </select>
          </div>
      </form>
